--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: Run all tests
-      run: dotnet test --nologo --no-build
+      run: dotnet test
