Set MSBuild to 16.0

--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -35,6 +35,7 @@ steps:
 
 - task: VSBuild@1
   inputs:
+    vsVersion: '16.0'
     solution: '$(solution)'
     msbuildArgs: '/m'
     platform: '$(buildPlatform)'
