--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,6 @@ dotnet_diagnostic.SA1208.severity = none
 
 # SA1633: File should have header
 dotnet_diagnostic.SA1633.severity = none
+
+# SA1516: Elements should be separated by blank line
+dotnet_diagnostic.SA1516.severity = none
