--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,17 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
 
+    - name: Setup Java for SonarScanner
+      uses: actions/setup-java@v4
+      with:
+        distribution: microsoft
+        java-version: 21
+
     - name: Setup SonarCloud
       run: dotnet tool install --global dotnet-sonarscanner
 
     - name: Start SonarCloud scan
-      run: dotnet sonarscanner begin /k:"${{ vars.SONAR_PROJ_KEY }}" /o:"${{ vars.SONAR_ORG }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+      run: dotnet sonarscanner begin /k:"${{ vars.SONAR_PROJ_KEY }}" /o:"${{ vars.SONAR_ORG }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url=https://sonarcloud.io
 
     - name: Build with dotnet
       run: dotnet build --configuration Release
