--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Cloning the repo
       uses: actions/checkout@v4
 
-    - name: Setup .NET
+    - name: Setup .NET - uses globals.json
       uses: actions/setup-dotnet@v4
 
     - name: Setup Java for SonarScanner
