--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: Run all tests
-      run: dotnet test
+      run: dotnet test --collect "Code Coverage"
 
     - name: End SonarCloud scan
       run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
