--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Setup .NET - uses globals.json
       uses: actions/setup-dotnet@v4
 
+    - name: Setup dotnet-coverage for code coverage
+      run: dotnet tool install --global dotnet-coverage
+
     - name: Setup Java for SonarScanner
       uses: actions/setup-java@v4
       with:
@@ -29,13 +32,16 @@ jobs:
       run: dotnet tool install --global dotnet-sonarscanner
 
     - name: Start SonarCloud scan
-      run: dotnet sonarscanner begin /k:"${{ vars.SONAR_PROJ_KEY }}" /o:"${{ vars.SONAR_ORG }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url=https://sonarcloud.io
+      run: dotnet sonarscanner begin /k:"${{ vars.SONAR_PROJ_KEY }}" /o:"${{ vars.SONAR_ORG }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url=https://sonarcloud.io /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build --no-incremental
 
     - name: Run all tests
-      run: dotnet test --collect "Code Coverage"
+      run: dotnet test --configuration Release
+
+    - name: Collect code coverage
+      run: dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
 
     - name: End SonarCloud scan
       run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
